Fixed: - Alignmments

--- a/src/components/Forms/LoginForm.css
+++ b/src/components/Forms/LoginForm.css
@@ -17,4 +17,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    height: 25px;
+}
+
+.login-menu > span {
+    font-size: 1em;
 }
