--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,6 +13,7 @@
     width: 600px;
     display: flex;
     align-items: center;
+    padding-right: 10px;
 }
 
 .header-inner-cart {
